docs: GetOriginalURL handler
